<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="@dimen/_500sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_backatas_login">
    </RelativeLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_56sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:id="@+id/val"
        android:src="@drawable/valioso" />

    <TextView
        android:id="@+id/sma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/val"
        android:layout_marginBottom="@dimen/_30sdp"
        android:fontFamily="@font/mvboli"
        android:text="@string/namaSMA"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp" />

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_268sdp"
        android:layout_height="@dimen/_300sdp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardCornerRadius="@dimen/_30sdp"
        android:id="@+id/crd"
        android:layout_below="@+id/sma"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"

            >

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mvboli"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_38ssp" />

            <EditText
                android:id="@+id/email"
                android:drawableStart="@drawable/ic_person"
                android:layout_width="@dimen/_210sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textSize="@dimen/_16sdp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/password"
                android:drawableStart="@drawable/ic_lock"
                android:layout_width="@dimen/_210sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/_20sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:drawablePadding="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:hint="@string/password"
                android:autofillHints="" />

            <Button
                android:layout_width="@dimen/_190sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/montserrat"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/crd"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/info"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/_12ssp"
        />

</RelativeLayout>