<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="@dimen/_600sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_backatas_login">
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_278sdp"
        android:layout_height="@dimen/_400sdp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardCornerRadius="@dimen/_40sdp"
        android:id="@+id/crd"
        >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                >

                <TextView
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mvboli"
                    android:text="@string/register"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_26ssp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register"
                android:id="@+id/atas"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_10sdp"
                >
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile"
                        android:layout_width="@dimen/_140sdp"
                        android:layout_height="@dimen/_140sdp"
                        android:layout_marginTop="@dimen/_10ssp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/profil_icon" />

                <ImageView
                    android:id="@+id/tambahfoto"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignTop="@+id/profile"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_minus17sdp"
                    android:layout_marginTop="@dimen/_100sdp"
                    android:layout_toEndOf="@+id/profile"
                    android:src="@drawable/ic_plus" />
            </RelativeLayout>

                <EditText
                    android:id="@+id/full_name"
                    android:drawableStart="@drawable/ic_person"
                    android:layout_width="@dimen/_240sdp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/atas"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="textPersonName"
                    android:hint="@string/fullName"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/email"
                    android:drawableStart="@drawable/ic_email"
                    android:layout_width="@dimen/_240sdp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/full_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/password"
                    android:drawableStart="@drawable/ic_lock"
                    android:layout_width="@dimen/_240sdp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email"
                    android:layout_centerHorizontal="true"
                    android:inputType="textPassword"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/instagram"
                    android:drawableStart="@drawable/ic_ig"
                    android:layout_width="@dimen/_240sdp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/instagram"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/whatsapp"
                    android:drawableStart="@drawable/ic_wa"
                    android:layout_width="@dimen/_240sdp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/instagram"
                    android:layout_centerHorizontal="true"
                    android:inputType="textLongMessage"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/whatsapp"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/line"
                    android:drawableStart="@drawable/ic_line"
                    android:layout_width="@dimen/_240sdp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/whatsapp"
                    android:layout_centerHorizontal="true"
                    android:inputType="textLongMessage"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_7sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/line"
                    android:autofillHints="" />

                <Button
                    android:id="@+id/signup"
                    android:layout_width="@dimen/_186sdp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/line"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:background="@drawable/rounded_button"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/go"
                    android:textColor="@color/colorWhite"
                    android:layout_centerHorizontal="true"
                    android:textSize="@dimen/_22ssp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>

</RelativeLayout>