<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Splash">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rel_atas"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relativeone"
            >

            <View
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_130sdp"
                android:id="@+id/firstline"
                android:background="@drawable/lines_w"
                android:layout_marginLeft="@dimen/_20sdp"
                />

            <View
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_180sdp"
                android:id="@+id/secondline"
                android:background="@drawable/lines_y"
                android:layout_toRightOf="@+id/firstline"
                android:layout_marginLeft="@dimen/_1sdp"
                />

            <View
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_220sdp"
                android:id="@+id/thirdline"
                android:background="@drawable/lines_bl"
                android:layout_toRightOf="@+id/secondline"
                android:layout_marginLeft="@dimen/_1sdp"
                />

            <View
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_100sdp"
                android:id="@+id/fourthline"
                android:background="@drawable/lines_w"
                android:layout_toRightOf="@+id/thirdline"
                android:layout_marginLeft="@dimen/_1sdp"
                />

            <View
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_150sdp"
                android:id="@+id/fifthline"
                android:background="@drawable/lines_y"
                android:layout_toRightOf="@+id/fourthline"
                android:layout_marginLeft="@dimen/_1sdp"
                />

    </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relativetwo"
            android:layout_toRightOf="@+id/relativeone"
            android:layout_marginTop="@dimen/_50sdp"
            >


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:id="@+id/textatas"
                android:text="@string/freeze"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/sharybold"
                android:layout_marginLeft="@dimen/_5sdp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:id="@+id/textbwh"
                android:text="@string/creative"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/sharybold"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_below="@+id/textatas"
                />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rel_bawah"
        android:layout_below="@+id/rel_atas"
        >
            <ImageView
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/valioso"
                android:layout_marginTop="@dimen/_20sdp"
                android:id="@+id/val"
                />

            <ProgressBar
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_below="@+id/val"
                android:id="@+id/pbar"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                android:id="@+id/welcome"
                android:text="@string/wellcome"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/sharybold"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_below="@+id/pbar"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_65sdp"
                />

        </RelativeLayout>

</RelativeLayout>